[package]
name = "scan_link_order"
version = "0.1.0"
authors = ["Dave Smith <dave@sophoservices.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = {version="0.10.8", features=["blocking"]}
config = "0.10.1"