[package]
name = "scan_link_order"
version = "0.1.0"
authors = ["Dave Smith <dave@sophoservices.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.13.0"
reqwest = {version="0.11.11", features=["blocking"]}
serde = {version="1.0.144"}
bincode = "1.3.1"
config = "0.13.2"